[gd_scene load_steps=3 format=3 uid="uid://dnx0mpdxi2geg"]

[ext_resource type="Script" uid="uid://8o8uyjv0puxm" path="res://Scripts/DeckArea.gd" id="1_p7x83"]
[ext_resource type="Texture2D" uid="uid://otyg5fpijbws" path="res://Assents/Fundo da carta.png" id="1_vbna3"]

[node name="DeckArea" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1012.0
offset_bottom = -508.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p7x83")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(71, 71)
texture = ExtResource("1_vbna3")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 140.0
offset_bottom = 140.0

[node name="CountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 32.0
offset_bottom = 27.0
text = "0"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
